# pdf-pipeline-poc

./: .env.example  .gitignore  CLAUDE.md  Modelfile.qwen3.5-nothink  README.md  conftest.py  pyproject.toml
scripts/: check_chunks.py  diagnose_deep.ps1  diagnose_retrieval.ps1  inspect_odl_output.ps1  test_agent.ps1  test_odl_lists.ps1
src/: app.py  indexer.py  logging_config.py  models.py  pipeline.py  silence.py
src/agent/: __init__.py  classifier.py  domain_config.py  graph.py  memory.py  router.py  runner.py  self_rag.py  tools.py
src/agent/domains/: contract.json  fallback.json  magazine.json  research.json  technical.json
src/chunking/: __init__.py  chunker.py
src/extraction/: __init__.py  base.py  kreuzberg_extractor.py  layout_extractor.py  opendataloader_extractor.py  pymupdf_extractor.py  router.py
src/graph/: __init__.py  builder.py  expander.py
src/rendering/: __init__.py  renderer.py
src/retrieval/: __init__.py  embedder.py  reranker.py  retriever.py  store.py
src/ui/: __init__.py  overlay.py
tests/: test_agent_tools.py  test_chunker.py  test_chunker_overlap.py  test_classifier.py  test_embedder_e5.py  test_extractor.py  test_graph_builder.py  test_graph_expander.py  test_indexer.py  test_kreuzberg_extractor.py  test_memory.py  test_models.py  test_overlay.py  test_reranker.py  test_retrieval.py  test_router.py  test_self_rag.py  test_tools_graph_wiring.py
tests/extraction/: test_opendataloader_extractor.py
tests/fixtures/: .gitkeep
