[project]
name = "pdf-pipeline-poc"
version = "0.1.0"
description = "Agentic PDF pipeline with bounding-box citation for German-language PDFs"
requires-python = ">=3.12,<3.15"
dependencies = [
    # PDF extraction
    "pymupdf>=1.24.9,<1.25.0",             # pinned: magic-pdf requires <1.25
    "pymupdf4llm>=0.0.17",
    "pdfmux>=0.3",

    # Embeddings & vector store
    "sentence-transformers>=3.3",
    "chromadb>=0.6",

    # LangChain / LangGraph agentic stack
    "langchain>=0.3.20",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3",
    "langgraph>=0.3",
    "langgraph-checkpoint>=2.0",

    # Local LLM
    "ollama>=0.4",

    # Frontend
    "streamlit>=1.43",

    # Core
    "pillow>=11.0",
    "pydantic>=2.10",
    "httpx>=0.28",
    "tenacity>=9.0",
]

[project.optional-dependencies]
# MinerU VLM fallback — install models separately via: python -m magic_pdf.download
# [full] extra dropped: it pins doclayout-yolo==0.0.2b1 (pre-release, no Windows/py3.13+ wheel)
gpu = [
    "magic-pdf>=1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pillow",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
