[project]
name = "pdf-pipeline-poc"
version = "0.1.0"
description = "Agentic PDF pipeline with bounding-box citation for German-language PDFs"
requires-python = ">=3.12,<3.15"
dependencies = [
    # PDF extraction
    "pymupdf>=1.24.9,<1.25.0",             # pinned: pymupdf-layout requires >=1.24
    "pymupdf4llm>=0.0.17",
    "pymupdf-layout>=1.0",                 # CPU-only layout parser, 10x faster than VLM, replaces magic-pdf
    "pdfmux>=0.3",                         # primary extractor — smart router

    # Embeddings & vector store
    "sentence-transformers>=3.3",
    "chromadb>=0.6",

    # LangChain 1.0 / LangGraph 1.0
    "langchain>=1.0",
    "langchain-community>=1.0",
    "langchain-ollama>=0.3",
    "langgraph>=1.0",
    "langgraph-checkpoint>=2.0",

    # Local LLM
    "ollama>=0.4",

    # Frontend
    "streamlit>=1.43",

    # Core
    "pillow>=11.0",
    "pydantic>=2.10",
    "httpx>=0.28",
    "tenacity>=9.0",
]

# No gpu extra — pymupdf-layout handles complex layouts on CPU.
# If you later need VLM-grade accuracy: install magic-pdf separately in its own venv.

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pillow",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
