[project]
name = "pdf-pipeline-poc"
version = "0.1.0"
description = "Agentic PDF pipeline with bounding-box citation for German-language PDFs"
requires-python = ">=3.12,<3.15"
dependencies = [
    # PDF extraction
    # pymupdf is NOT pinned directly — pymupdf-layout pins an exact matching version
    "pymupdf4llm>=0.0.17",
    "pymupdf-layout>=1.27.2.3",            # CPU layout parser; brings in its own pymupdf
    "pdfmux>=0.3",                         # primary extractor — smart router
    # Embeddings & vector store
    # LangGraph 1.2.2 / LangChain 1.3.2 (latest stable as of June 2026)
    "langgraph>=1.2.2",
    "langgraph-checkpoint>=2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-ollama>=0.3",
    # Local LLM
    "ollama>=0.4",
    # Frontend
    "streamlit>=1.43",
    # Core
    "pillow>=11.0",
    "pydantic>=2.10",
    "httpx>=0.28",
    "tenacity>=9.0",
    "fitz>=0.0.1.dev2",
    "torchvision>=0.27.0",
    "faiss-cpu>=1.14.2",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "opendataloader-pdf>=2.4.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pillow",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
